#6 initial calendar view

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,11 +24,11 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-		<title>React App</title>
+		<title>KFUM Voxette</title>
 	</head>
 	<body>
 		<noscript>
-			You need to enable JavaScript to run this app.
+			Du behöver slå på JavaScript för att denna sida ska fungera.
 		</noscript>
 		<div id="root"></div>
 	</body>
