Added favicons, fonts, logo, and altered the theme to kfum colors. Also fixed grid layouts on forms.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,14 @@
 		homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
 		-->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+		<!-- Icons -->
+		<link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon/favicon-16.png" type="image/x-icon">
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/images/favicon/favicon-57.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/images/favicon/favicon-72.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/images/favicon/favicon-114.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/images/favicon/favicon-144.png">
+
 		<!--
 		Notice the use of %PUBLIC_URL% in the tags above.
 		It will be replaced with the URL of the `public` folder during the build.
@@ -22,6 +29,7 @@
 		
 		<!-- for materialUI -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bevan&display=swap">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 		<title>KFUM Voxette</title>
