--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>KFUM Voxette</title>
+    <title>Voxette</title>
   </head>
   <body>
     <noscript>
